--- a/index.html
+++ b/index.html
@@ -167,34 +167,34 @@
                 <div class="team__grid">
                     <div class="card team-member">
                         <div class="card__body">
-                            <h4 class="member__name">Dr. Sarah Chen</h4>
+                            <h4 class="member__name">Dr. Arunabha Majumdar</h4>
                             <div class="member__role">Principal Investigator</div>
-                            <p class="member__bio">Professor of Biostatistics with expertise in statistical genetics and genomic medicine</p>
-                            <div class="member__education">PhD Statistics, Stanford University</div>
+                            <p class="member__bio">Professor of Biostatistics with expertise in statistical genetics and genomics</p>
+                            <div class="member__education">PhD Statistics, ISI Kolkata</div>
                         </div>
                     </div>
                     <div class="card team-member">
                         <div class="card__body">
-                            <h4 class="member__name">Dr. Michael Rodriguez</h4>
-                            <div class="member__role">Senior Research Scientist</div>
-                            <p class="member__bio">Focuses on population genetics and ancestry inference methods</p>
-                            <div class="member__education">PhD Human Genetics, Harvard University</div>
+                            <h4 class="member__name"> Saurabh Mishra</h4>
+                            <div class="member__role">PhD Student (SRF)</div>
+                            <p class="member__bio">Developing new methods for gene-environment interaction in complex traits</p>
+                            <div class="member__education">MSc Statistics, University of Lucknow</div>
                         </div>
                     </div>
                     <div class="card team-member">
                         <div class="card__body">
                             <h4 class="member__name">Emily Johnson</h4>
-                            <div class="member__role">PhD Student</div>
-                            <p class="member__bio">Developing new methods for rare variant association testing</p>
-                            <div class="member__education">MS Biostatistics, University of Washington</div>
+                            <div class="member__role">PhD Student (SRF)</div>
+                            <p class="member__bio">Developing new methods for disease subtypes</p>
+                            <div class="member__education">MSc Statistics, Aligarh Muslim University</div>
                         </div>
                     </div>
                     <div class="card team-member">
                         <div class="card__body">
-                            <h4 class="member__name">David Park</h4>
-                            <div class="member__role">Postdoctoral Fellow</div>
-                            <p class="member__bio">Working on polygenic risk score methodology and applications</p>
-                            <div class="member__education">PhD Statistics, UC Berkeley</div>
+                            <h4 class="member__name">Ishita Agrwal</h4>
+                            <div class="member__role">PhD Student (JRF)</div>
+                            <p class="member__bio">Working on causal inference.</p>
+                            <div class="member__education">MSc Mathematics, IIT Indore</div>
                         </div>
                     </div>
                 </div>
