--- a/index.html
+++ b/index.html
@@ -396,14 +396,15 @@
                                 <h4>Lab Information</h4>
                                 <div class="contact__item">
                                     <strong>Address:</strong><br>
-                                    123 Research Drive<br>
-                                    University City, State 12345
+                                    Mathematics Block, AD3<br>
+                                    Indian Institute of Technology Hyderabad<br>
+                                    Kandi, Sangareddy - 502284
                                 </div>
                                 <div class="contact__item">
                                     <strong>Phone:</strong> (555) 123-4567
                                 </div>
                                 <div class="contact__item">
-                                    <strong>Email:</strong> info@statgen-lab.edu
+                                    <strong>Email:</strong> arun.majum@iith.ac.in
                                 </div>
                                 <div class="contact__item">
                                     <strong>Office Hours:</strong><br>
